welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:49: error: type mismatch;
 found   : Boolean
 required: Int
    for (i <- 1 to directionTraceVerte() == 2)
                                         ^